--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "mocha dist/test"
   },
+  "typings": "dist/index.d.ts",
   "dependencies": {},
   "devDependencies": {
     "@types/chai": "^3.4.34",
