--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MM",
+  "name": "m.m",
   "version": "1.0.0-alpha.2",
   "description": "A few missing monads for javascript and typescript",
   "private": false,
