--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "source-map-support": "^0.4.12",
+    "ts-node": "^2.1.0",
     "typescript": "^2.2.1"
   }
 }
