--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "m.m",
-  "version": "1.0.0-alpha.5",
+  "version": "1.0.0",
   "description": "A few missing monads for javascript and typescript",
   "private": false,
   "repository": {
