--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "tsc",
     "test": "mocha dist/test"
   },
+  "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "devDependencies": {
     "@types/chai": "^3.4.35",
