--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "devDependencies": {
-    "@types/chai": "^3.4.35",
-    "@types/mocha": "^2.2.40",
-    "@types/node": "^7.0.12",
-    "chai": "^3.5.0",
-    "mocha": "^3.2.0",
-    "source-map-support": "^0.4.14",
-    "ts-node": "^3.0.2",
-    "typescript": "^2.2.2"
+    "@types/chai": "3.4.35",
+    "@types/mocha": "2.2.40",
+    "@types/node": "7.0.12",
+    "chai": "3.5.0",
+    "mocha": "3.2.0",
+    "source-map-support": "0.4.14",
+    "ts-node": "3.0.2",
+    "typescript": "2.2.2"
   }
 }
