--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "m.m",
-  "version": "1.0.2",
+  "version": "1.0.3-alpha.1",
   "description": "A few missing monads for javascript and typescript",
   "private": false,
   "repository": {
